force-app/main/default/objects/RDMasterBlaster__c/RDMasterBlaster__c.object-meta.xml
<CustomObject>
    <label>RDMasterBlaster</label>
    <nameField>
        <label>RDMasterBlaster Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RDMasterBlaster</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>