force-app/main/default/objects/RDMasterBlaster__c/fields/ASME_LL__c.field-meta.xml
<CustomField>
    <fullName>ASME_LL__c</fullName>
    <label>ASME LL</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>