force-app/main/default/objects/RDMasterBlaster__c/fields/CE_Mark_UL__c.field-meta.xml
<CustomField>
    <fullName>CE_Mark_UL__c</fullName>
    <label>CE Mark UL</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>