force-app/main/default/objects/RDMasterBlaster__c/fields/China_ML_UL__c.field-meta.xml
<CustomField>
    <fullName>China_ML_UL__c</fullName>
    <label>China ML UL</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>