force-app/main/default/objects/RDMasterBlaster__c/fields/Derate_EQN__c.field-meta.xml
<CustomField>
    <fullName>Derate_EQN__c</fullName>
    <label>Derate EQN</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>METL</fullName>
            </value>
            <value>
                <fullName>COMM</fullName>
            </value>
            <value>
                <fullName>COMA</fullName>
            </value>
            <value>
                <fullName>COMT</fullName>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>