force-app/main/default/objects/RDMasterBlaster__c/fields/Derate_Teflon__c.field-meta.xml
<CustomField>
    <fullName>Derate_Teflon__c</fullName>
    <label>Derate Teflon</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>