force-app/main/default/objects/RDMasterBlaster__c/fields/KOSHA_LL__c.field-meta.xml
<CustomField>
    <fullName>KOSHA_LL__c</fullName>
    <label>KOSHA LL</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>