force-app/main/default/objects/RDMasterBlaster__c/fields/Liquid_Relief__c.field-meta.xml
<CustomField>
    <fullName>Liquid_Relief__c</fullName>
    <description>Changed from Liquid Relief to DPM per Rhen on 8/12</description>
    <label>DPM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Either</fullName>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>