force-app/main/default/objects/RDMasterBlaster__c/fields/MatlCodePos__c.field-meta.xml
<CustomField>
    <fullName>MatlCodePos__c</fullName>
    <label>MatlCodePos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>