force-app/main/default/objects/RDMasterBlaster__c/fields/MatlCodeVac__c.field-meta.xml
<CustomField>
    <fullName>MatlCodeVac__c</fullName>
    <label>MatlCodeVac</label>
    <length>255</length>
    <type>Text</type>
</CustomField>