force-app/main/default/objects/RDMasterBlaster__c/fields/MNFA__c.field-meta.xml
<CustomField>
    <fullName>MNFA__c</fullName>
    <label>MNFA</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>