force-app/main/default/objects/RDMasterBlaster__c/fields/NACE__c.field-meta.xml
<CustomField>
    <fullName>NACE__c</fullName>
    <label>NACE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>