force-app/main/default/objects/RDMasterBlaster__c/fields/OPtoBpRatio__c.field-meta.xml
<CustomField>
    <fullName>OPtoBpRatio__c</fullName>
    <label>OPtoBpRatio</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>