force-app/main/default/objects/RDMasterBlaster__c/fields/PosValue__c.field-meta.xml
<CustomField>
    <fullName>PosValue__c</fullName>
    <label>PosValue</label>
    <precision>11</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>