force-app/main/default/objects/RDMasterBlaster__c/fields/PosWithstand_Ind__c.field-meta.xml
<CustomField>
    <fullName>PosWithstand_Ind__c</fullName>
    <label>PosWithstand Ind</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>