force-app/main/default/objects/RDMasterBlaster__c/fields/PressLL__c.field-meta.xml
<CustomField>
    <fullName>PressLL__c</fullName>
    <label>PressLL</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>