force-app/main/default/objects/RDMasterBlaster__c/fields/PressUL__c.field-meta.xml
<CustomField>
    <fullName>PressUL__c</fullName>
    <label>PressUL</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>