force-app/main/default/objects/RDMasterBlaster__c/fields/PTC__c.field-meta.xml
<CustomField>
    <fullName>PTC__c</fullName>
    <label>PTC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FFA</fullName>
            </value>
            <value>
                <fullName>LFA</fullName>
            </value>
            <value>
                <fullName>FFS</fullName>
            </value>
            <value>
                <fullName>FFV</fullName>
            </value>
            <value>
                <fullName>LFV</fullName>
            </value>
            <value>
                <fullName>GFS</fullName>
            </value>
            <value>
                <fullName>KBA</fullName>
            </value>
            <value>
                <fullName>MCX</fullName>
            </value>
            <value>
                <fullName>MNX</fullName>
            </value>
            <value>
                <fullName>FRS</fullName>
            </value>
            <value>
                <fullName>RCS</fullName>
            </value>
            <value>
                <fullName>RSD</fullName>
            </value>
            <value>
                <fullName>RSW</fullName>
            </value>
            <value>
                <fullName>SLS</fullName>
            </value>
            <value>
                <fullName>STD</fullName>
            </value>
            <value>
                <fullName>STX</fullName>
            </value>
            <value>
                <fullName>SXP</fullName>
            </value>
            <value>
                <fullName>LSD</fullName>
            </value>
            <value>
                <fullName>LSS</fullName>
            </value>
            <value>
                <fullName>LST</fullName>
            </value>
            <value>
                <fullName>STT</fullName>
            </value>
            <value>
                <fullName>ULX</fullName>
            </value>
            <value>
                <fullName>ULH</fullName>
            </value>
            <value>
                <fullName>VIP</fullName>
            </value>
            <value>
                <fullName>ZAP</fullName>
            </value>
            <value>
                <fullName>VPC</fullName>
            </value>
            <value>
                <fullName>VPR</fullName>
            </value>
            <value>
                <fullName>VPS</fullName>
            </value>
            <value>
                <fullName>SFC</fullName>
            </value>
            <value>
                <fullName>M9T</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>