force-app/main/default/objects/RDMasterBlaster__c/fields/STC__c.field-meta.xml
<CustomField>
    <fullName>STC__c</fullName>
    <label>STC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UT</fullName>
            </value>
            <value>
                <fullName>TG</fullName>
            </value>
            <value>
                <fullName>A1</fullName>
            </value>
            <value>
                <fullName>A3</fullName>
            </value>
            <value>
                <fullName>D1</fullName>
            </value>
            <value>
                <fullName>D5</fullName>
            </value>
            <value>
                <fullName>J1</fullName>
            </value>
            <value>
                <fullName>J4</fullName>
            </value>
            <value>
                <fullName>J2</fullName>
            </value>
            <value>
                <fullName>A2</fullName>
            </value>
            <value>
                <fullName>D3</fullName>
            </value>
            <value>
                <fullName>D2</fullName>
            </value>
            <value>
                <fullName>FS</fullName>
            </value>
            <value>
                <fullName>CF</fullName>
            </value>
            <value>
                <fullName>DD</fullName>
            </value>
            <value>
                <fullName>QU</fullName>
            </value>
            <value>
                <fullName>CS</fullName>
            </value>
            <value>
                <fullName>QC</fullName>
            </value>
            <value>
                <fullName>AA</fullName>
            </value>
            <value>
                <fullName>AF</fullName>
            </value>
            <value>
                <fullName>CL</fullName>
            </value>
            <value>
                <fullName>FH</fullName>
            </value>
            <value>
                <fullName>FL</fullName>
            </value>
            <value>
                <fullName>FU</fullName>
            </value>
            <value>
                <fullName>FX</fullName>
            </value>
            <value>
                <fullName>HL</fullName>
            </value>
            <value>
                <fullName>LL</fullName>
            </value>
            <value>
                <fullName>Z1</fullName>
            </value>
            <value>
                <fullName>Z2</fullName>
            </value>
            <value>
                <fullName>Z3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>