force-app/main/default/objects/RDMasterBlaster__c/fields/Teflon_Ambient__c.field-meta.xml
<CustomField>
    <fullName>Teflon_Ambient__c</fullName>
    <label>Teflon Ambient</label>
    <precision>11</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>