force-app/main/default/objects/RDMasterBlaster__c/fields/TempLL__c.field-meta.xml
<CustomField>
    <fullName>TempLL__c</fullName>
    <label>TempLL</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>