force-app/main/default/objects/RDMasterBlaster__c/fields/VacLL__c.field-meta.xml
<CustomField>
    <fullName>VacLL__c</fullName>
    <label>VacLL</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>