force-app/main/default/objects/RDMasterBlaster__c/fields/VacUL__c.field-meta.xml
<CustomField>
    <fullName>VacUL__c</fullName>
    <label>VacUL</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>