force-app/main/default/objects/RDMasterBlaster__c/fields/VacValue__c.field-meta.xml
<CustomField>
    <fullName>VacValue__c</fullName>
    <label>VacValue</label>
    <precision>11</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>