force-app/main/default/objects/RDMasterBlaster__c/fields/VMNFA__c.field-meta.xml
<CustomField>
    <fullName>VMNFA__c</fullName>
    <label>VMNFA</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>