force-app/main/default/objects/RDMasterBlaster__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PTC__c</columns>
    <columns>SZC__c</columns>
    <columns>STC__c</columns>
    <columns>VMNFA__c</columns>
    <columns>PressLL__c</columns>
    <columns>PressUL__c</columns>
    <columns>China_ML_LL__c</columns>
    <columns>China_ML_UL__c</columns>
    <columns>VacLL__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>ASME_LL__c</columns>
    <columns>ASME_UL__c</columns>
    <columns>DSCVAR__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>